--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,13 @@ button {
   background-color: #4caf50;
   border-radius: 10px;
   border: solid white;
+  cursor: pointer;
 }
 
 .controls {
   display: flex;
   gap: 15px;
+  flex-direction: column;
 }
 
 .pulser {
