--- a/styles.css
+++ b/styles.css
@@ -19,8 +19,27 @@ button {
   color: white;
   background-color: #4caf50;
   border-radius: 10px;
-  border: solid white;
+  border: none;
   cursor: pointer;
+  /* --border-width: 3;
+  --border-radius: 10;
+  --gradient-start: #ffffff;
+  --gradient-end: #00bfff;
+  --cut-size: 100px;
+  background-image: paint(gradient-border);
+  background-repeat: no-repeat;
+  background-size: 100% 100%; */
+
+  --border-width: 2;
+  --border-radius: 12;
+  --gradient-start: #fff;
+  --gradient-end: #00ffff;
+  --cut-size: 10;
+
+  background-image: paint(gradient-border);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  mask-image: paint(mask-shape);
 }
 
 canvas {
